--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.0",
     "@clerk/nextjs": "^6.12.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.29.1",
     "lucide-react": "^0.554.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.4.0"
   },
